package Enum;

public enum Difficulty {
    BEGINNER,
    INTERMEDIATE,
    ADVANCED
}
