package Enum;

public enum Genre {
    FICTION,
    NON_FICTION,
    BIOGRAPHY,
    SCIENCE,
    TECHNOLOGY
}
